@@ -1,5 +1,16 @@
 2010-09-10  Tony Chang  <tony@chromium.org>
 
+        Unreviewed, rolling out r67216.
+        http://trac.webkit.org/changeset/67216
+        https://bugs.webkit.org/show_bug.cgi?id=44709
+
+        Broke
+
+        * Scripts/webkitpy/layout_tests/deduplicate_tests.py:
+        * Scripts/webkitpy/layout_tests/deduplicate_tests_unittest.py:
+
+2010-09-10  Tony Chang  <tony@chromium.org>
+
         Reviewed by Ojan Vafai.
 
         deduplicate-tests should be runnable from any WebKit directory
